[Harmony Cast Dialog] Give the "no devices found" info button a label

Give the info button a label read by screen readers when it is in focus:
"No Cast destinations found. Need help?"

Bug: 869600
Change-Id: I90af935d528f7aa128469b98ecb691f6d13228a0
Reviewed-on: https://chromium-review.googlesource.com/1214044
Reviewed-by: Derek Cheng <imcheng@chromium.org>
Commit-Queue: Takumi Fujimoto <takumif@chromium.org>
Cr-Commit-Position: refs/heads/master@{#590017}
Former-commit-id: 02e9b8fe2ed32fcdbeef49f5c652adfe4f3f1601