chrome/browser/ui/views/media_router/cast_dialog_no_sinks_view.cc
@@ -87,6 +87,8 @@ views::View* CastDialogNoSinksView::CreateHelpIconView() {
   help_icon->SetFocusForPlatform();
   help_icon->SetBorder(
       views::CreateEmptyBorder(gfx::Insets(kPrimaryIconBorderWidth)));
+  help_icon->SetAccessibleName(
+      l10n_util::GetStringUTF16(IDS_MEDIA_ROUTER_DESTINATION_MISSING));
   HoverButton* view =
       new HoverButton(/* button_listener */ nullptr, std::move(help_icon),
                       title, base::string16());
